// protoのバージョンの宣言
syntax = "proto3";

// protoファイルから自動生成させるGoのコードの置き先
// (詳細は4章にて)
option go_package = "pkg/grpc";

// packageの宣言
package batchservice;

// サービスの定義
service BatchService {
	// サービスが持つメソッドの定義
	rpc Convert (ConvertRequest) returns (ConvertResponse); 
}

// 型の定義
message ConvertRequest {
}

message ConvertResponse {
}